--- a/smart-exchange-movil/src/app/cliente/cliente.page.html
+++ b/smart-exchange-movil/src/app/cliente/cliente.page.html
@@ -6,12 +6,35 @@
         <div class="titulo">El mejor tipo de cambio <br>
           <small>{{fechaActual}}</small>
         </div>
-        <div class="compra-venta" [ngClass]="true?'accent-background':'warn-background'">
+        <div class="compra-venta">
           <div class="compra"><small>S/ </small>{{tipoCambio?.compra}}<br><small>COMPRA</small></div>
           <div class="venta"><small>S/ </small>{{tipoCambio?.venta}}<br><small>VENTA</small></div>
         </div>
       </div><br>
-      
+        <div class="envio-recibo">
+            <div class="envio">
+                <div><small>{{envio.desc}}</small></div>
+                <mat-form-field appearance="outline">
+                    <input formControlName="envio" type="text" matInput>
+                    <img [src]='envio.img' matSuffix>
+                </mat-form-field>
+            </div>
+            <button (click)="cambiaMoneda()" mat-fab color="primary" class="cambio" type="button">
+                <mat-icon class="icon-cambio">swap_vert</mat-icon>
+            </button>
+            <div class="recibo">
+                <div><small>{{recibo.desc}}</small></div>
+                <mat-form-field appearance="outline">
+                    <input formControlName="recibo" type="text" matInput readonly>
+                    <img [src]='recibo.img' matSuffix>
+                </mat-form-field>
+            </div>
+            <div class="btns-cliente">
+              <button type="submit" mat-fab extended color="primary" [disabled]="tipoCambio?false:true">
+                INICIAR OPERACIÓN
+              </button>
+            </div>
+        </div>
     </form>
   </div>
 </ion-content>
