--- a/smart-exchange-movil/src/app/cliente/cliente.page.scss
+++ b/smart-exchange-movil/src/app/cliente/cliente.page.scss
@@ -13,9 +13,6 @@
     border-top-left-radius: 1.5em;
     border-top-right-radius: 1.5em;
     padding: 1em;
-    -webkit-box-shadow: 0px -5px 16px -9px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px -5px 16px -9px rgba(0,0,0,0.75);
-    box-shadow: 0px -5px 16px -9px rgba(0,0,0,0.75);
     width: 100%;
     height: 80vh;
     position: fixed;
@@ -52,15 +49,52 @@
     color: black;
     font-weight: 800;
 }
-.compra-venta small{
-    //color: #2d47af;
+.compra-venta small, .envio small, .recibo small {
     color: #747373;
     font-weight: 500;
     font-size: 0.7em;
+    text-transform: uppercase;
 }
 .compra, .venta{
     width: 50%;
     margin: 10px;
     box-sizing: border-box;
 }
-    
+
+//////// cambios
+.envio-recibo {
+    align-items: center;
+    position: relative;
+    box-sizing: border-box;
+    width: 100%;
+    background: #ffffff;
+    padding: 1em;
+    border-radius: 1.5em;
+    -webkit-box-shadow: 0px -5px 16px -9px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px -5px 16px -9px rgba(0,0,0,0.75);
+    box-shadow: 0px -5px 16px -9px rgba(0,0,0,0.75);
+}
+.envio-recibo mat-form-field {
+    width: 100%;
+}
+.envio-recibo mat-form-field img {
+    width: 2.5em;
+    padding-right: 5px;
+}
+.cambio {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 6.3em;
+    z-index: 10;
+    transition: transform 0.5s ease;
+}
+.girado {
+    transform: translateX(0%) rotate(180deg);
+}
+ion-button {
+    width: 100%;
+}
+.btns-cliente {
+    text-align: center;
+}
