--- a/smart-exchange-movil/src/app/login/login.page.html
+++ b/smart-exchange-movil/src/app/login/login.page.html
@@ -5,32 +5,29 @@
   <div class="formulario">
     <h4 class="titulo">¡NOS ALEGRA VERTE!</h4> 
     <form  [formGroup]="loginForm" (ngSubmit)="login()">
-      <ion-list>
+      <mat-form-field appearance="outline">
+        <mat-label>Ingrese su correo/usuario</mat-label>
+        <input matInput type="text" formControlName="username">
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Contraseña</mat-label>
+        <input matInput [type]="hide?'password':'text'" formControlName="password">
+        <mat-icon class="pointer" matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+      </mat-form-field><br>
+      <!-- <ion-list>
         <ion-item>
           <ion-input formControlName="username" placeholder="correo@gmail.com"></ion-input>
         </ion-item>
         <ion-item>
           <ion-input formControlName="password"  placeholder="Contraseña"></ion-input>
         </ion-item>
-<!--         <br>
-        <ion-item>
-          <ion-input formControlName="username" labelPlacement="floating">
-            <div slot="label">Correo/Usuario<ion-text color="danger">*</ion-text></div>
-          </ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input formControlName="password" labelPlacement="floating" [type]="hide?'password':'text'">
-            <div slot="label">Contraseña <ion-text color="danger">*</ion-text></div>
-            <ion-icon item-end slot="end" name="{{hide ?'eye-off-outline':'eye-outline'}}" (click)="hide=!hide"></ion-icon>
-          </ion-input>
-        </ion-item> -->
-      </ion-list>
+      </ion-list> -->
       <ion-button type="submit" expand="Block" shape="round">Iniciar sesión</ion-button>
       <ion-button type="reset" expand="Block" shape="round" color="secondary">Cancelar</ion-button>
       <div class="registrate">¿Aún no tienes cuenta?</div>
       <ion-button href="/registrate" type="button" expand="Block" shape="round">Regístrate</ion-button>
     </form>
-  </div><br>
+  </div>
   <div class="aux-buttons">
     <div class="aux">
       <ion-icon name="key"></ion-icon><br>
