--- a/smart-exchange-movil/src/app/login/login.page.scss
+++ b/smart-exchange-movil/src/app/login/login.page.scss
@@ -26,7 +26,7 @@ ion-content.background{
 ion-input{
     --background: #ffffff;
 }
-ion-button{
+ion-button, mat-form-field{
     width: 100%;
 }
 .aux-buttons{
