--- a/smart-exchange-movil/src/app/operacion/operacion.component.scss
+++ b/smart-exchange-movil/src/app/operacion/operacion.component.scss
@@ -20,8 +20,38 @@
 }
 ::ng-deep .mat-step-header[aria-selected="true"]{
     background: rgba(45, 71, 175, 0.1);
-    background: rgba(71, 190, 17, 0.1);
+    //background: rgba(71, 190, 17, 0.1);
 }
 .datos-stepper img{
     width: 2em;
+}
+
+///// SEGUNDO PASO
+.paso-transferencia .txt-pasos {
+    text-transform: uppercase;
+    padding: 5px 0px;
+    font-size: 0.8em;
+    color: #747373;
+}
+.paso-transferencia th {
+    text-align: left;
+    font-size: 0.8em;
+    padding: 2px;
+}
+.paso-transferencia td {
+    text-align: left;
+    font-size: 0.7em;
+    padding: 2px;
+}
+.tabla{
+    border-radius: 1.5em;
+    border: solid 1px var(--ion-color-secondary);
+    padding: 1em;
+}
+
+// tr:nth-child(odd) {
+//     background-color: #f2f2f2;
+// }
+tr:nth-child(even) {
+    background: rgba(45, 71, 175, 0.1);
 }
