--- a/smart-exchange-movil/src/app/operacion/operacion.component.html
+++ b/smart-exchange-movil/src/app/operacion/operacion.component.html
@@ -107,7 +107,7 @@
                 <div class="letra-pequena"><small><i>LC Exchange NO realiza débito automático de ninguna cuenta.</i></small></div>
             </div>
             <div class="botones-operacion">
-                <mat-slide-toggle formControlName="transferido" color="primary">Ya hice la transferencia</mat-slide-toggle> <br>
+                <mat-slide-toggle formControlName="transferido" color="primary">Ya hice la transferencia</mat-slide-toggle> <br><br>
                 <button  matStepperPrevious mat-fab extended color="accent" [disabled]="estaCargando">
                     Atrás
                 </button>&nbsp;
