--- a/smart-exchange-movil/android/app/src/main/res/xml/network_security_config.xml
+++ b/smart-exchange-movil/android/app/src/main/res/xml/network_security_config.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
   <domain-config cleartextTrafficPermitted="true">
-    <domain includeSubdomains="true">https://d70f-181-115-171-145.ngrok-free.app</domain>
+    <domain includeSubdomains="true">https://6c64-2800-cd0-2811-9200-6497-3a3f-9935-6e0c.ngrok-free.app</domain>
   </domain-config>
+<!--  <base-config cleartextTrafficPermitted="true">
+    <trust-anchors>
+      <certificates src="@raw/certificado_publico" format="PEM" />
+    </trust-anchors>
+  </base-config>-->
 </network-security-config>
+
