--- a/smart-exchange-movil/src/app/tabs/tabs.page.html
+++ b/smart-exchange-movil/src/app/tabs/tabs.page.html
@@ -1,9 +1,9 @@
 
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon aria-hidden="false" name="business"></ion-icon>
-      <ion-label>Cuentas bancarias</ion-label>
+    <ion-tab-button tab="mis-operaciones" href="/tabs/mis-operaciones">
+      <ion-icon name="receipt"></ion-icon>
+      <ion-label>Operaciones</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="cliente" href="/tabs/cliente">
@@ -11,10 +11,11 @@
       <ion-label>Operación</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
-      <ion-icon name="receipt"></ion-icon>
-      <ion-label>Operaciones</ion-label>
+    <ion-tab-button tab="lista-cuentas" href="/tabs/lista-cuentas">
+      <ion-icon aria-hidden="false" name="business"></ion-icon>
+      <ion-label>Cuentas bancarias</ion-label>
     </ion-tab-button>
+
   </ion-tab-bar>
 
 </ion-tabs>
