--- a/smart-exchange-frnt/src/app/login/login.component.html
+++ b/smart-exchange-frnt/src/app/login/login.component.html
@@ -38,6 +38,14 @@
         <div class="contenido-der3">
             <div class="logo-log-reg3">
                 <img src='assets/img/logofooter.png' alt="">
+            </div><br>
+            <div class="tipos-de-cambios">
+                <table>
+                    <tr class="lc"><td></td><td><small>COMPRA</small></td><td><small>VENTA</small></td></tr>
+                    <tr class="lc"><td><img src="assets/img/logo3.png"></td><td><small>S/ </small>3.8495</td><td><small>S/ </small>3.8540</td></tr>
+                    <tr><td><img src="assets/img/sunat.svg" alt=""></td><td><small>S/ </small>3.8500</td><td><small>S/ </small>3.8540</td></tr>
+                    <tr><td><mat-icon>account_balance</mat-icon> Bancos</td><td><small>S/ </small>3.7980</td><td><small>S/ </small>3.7980</td></tr>
+                </table>
             </div>
             <br>
             <div class="contenedor-carrusel">
