--- a/smart-exchange-movil/src/app/cliente/cliente.page.scss
+++ b/smart-exchange-movil/src/app/cliente/cliente.page.scss
@@ -20,7 +20,12 @@
     box-sizing: border-box;
 }
 
+
+
   /////////////////TIPO DE CAMBIO
+.cargando-text {
+    height: 1.5em;
+}
 .tipo-cambio{
     width: 80%;
     text-align: center;
