--- a/smart-exchange-movil/src/app/lista-cuentas-bancarias/lista-cuentas-bancarias.page.scss
+++ b/smart-exchange-movil/src/app/lista-cuentas-bancarias/lista-cuentas-bancarias.page.scss
@@ -8,6 +8,19 @@
     margin: 0;
     //#2d47af
 }
+
+ion-item {
+    --border-style: none !important;
+}  
+.estado{
+    position: absolute;
+    text-transform: uppercase;
+    font-size: 0.6em;
+    bottom: -1em;
+    right: 0em;
+    padding: 1px 4px;
+    border-radius: 7px;
+}
 .card {
     background-color: #f5f5f5;
     border-top-left-radius: 1.5em;
@@ -18,4 +31,44 @@
     position: fixed;
     bottom: 0;
     box-sizing: border-box;
+}
+.scrol-infinito{
+    position: relative;
+    overflow-y: auto;
+    max-height: 80vh;
+    padding-bottom: 1em;
+}
+.deshabilitado-estado {
+    background: #92949c !important;
+    color: white;
+}
+.activo-estado{
+    background: #47be11 !important;
+    color: white;
+}
+table{
+    width: 90%;
+    margin: auto;
+    border-radius: 10px;
+}
+table td, table th{
+    text-align: center;
+}
+table th{
+    background: #2d47af;
+    color: white;
+    font-size: 0.7em;
+    text-transform: uppercase;
+}
+table td{
+    padding-bottom: 5px;
+}
+ion-card-header{
+    padding: 2px;
+}
+ion-card-content{
+    padding: 0;
+}
+ion-card-title{
+    margin: 0;
 }
