--- a/smart-exchange-movil/src/app/lista-cuentas-bancarias/lista-cuentas-bancarias.page.html
+++ b/smart-exchange-movil/src/app/lista-cuentas-bancarias/lista-cuentas-bancarias.page.html
@@ -1,10 +1,13 @@
 <ion-content [fullscreen]="true" class="page">
   <app-explore-container></app-explore-container>
   <div class="card">
+    <button  (click)="agregaCuentasBancarias()" class="agrega-cuenta" type="button" mat-mini-fab color="primary">
+      <mat-icon>add_circle</mat-icon>
+    </button>
     <div class="scrol-infinito">
       <ng-container *ngIf="!estaCargando">
         <ng-container *ngFor="let item of dataSource; let index">
-          <ion-card>
+          <ion-card [class]="item.activo?'borde-activo':'borde-inactivo'">
             <ion-item-sliding>
               <ion-item>
                 <ion-label>
@@ -13,7 +16,7 @@
                       <small>{{item.nombre}}</small>
                     </ion-card-subtitle>
                     <ion-card-title>
-                      <small>{{item.bancoNombre}}</small>
+                      <small><b>{{item.bancoNombre}}</b></small>
                     </ion-card-title>
                   </ion-card-header>
                   <ion-card-content>
@@ -26,17 +29,17 @@
                 </ion-label>
               </ion-item>
               <ion-item-options side="start">
-                <ion-item-option>
-                  <ion-icon slot="icon-only" name="save-outline"></ion-icon>
-                </ion-item-option>
-                <ion-item-option>
-                  <ion-icon slot="icon-only" name="people-outline"></ion-icon>
+                <ion-item-option (click)="editar(item)" color="secondary">
+                  <ion-icon slot="icon-only" name="create"></ion-icon>
+                  <div>Editar</div>
                 </ion-item-option>
               </ion-item-options>
               <ion-item-options side="end">
                 <ion-item-option (click)="cambioEstado(item)" [color]="item.activo?'medium':'primary'">
                   <ion-icon slot="icon-only" name="remove-circle" *ngIf="item.activo"></ion-icon>
                   <ion-icon slot="icon-only" name="checkmark-circle" *ngIf="!item.activo"></ion-icon>
+                  <div *ngIf="item.activo">Deshabilitar</div>
+                  <div *ngIf="!item.activo">Activar</div>
                 </ion-item-option>
               </ion-item-options>
             </ion-item-sliding>
