--- a/smart-exchange-movil/src/app/mis-operaciones/mis-operaciones.page.html
+++ b/smart-exchange-movil/src/app/mis-operaciones/mis-operaciones.page.html
@@ -1,18 +1,74 @@
 <ion-content [fullscreen]="true" class="page">
   <app-explore-container></app-explore-container>
   <div class="card">
+    <ng-container *ngIf="!estaCargando">
     <div #scrolInfinito class="scrol-infinito" (scroll)="onScroll($event)">
       <ion-card *ngFor="let item of dataSource; let index" [class]="buscarClasePorCodigo(item.estado)">
-        <ion-card-header>
-          <ion-card-title><small>Ticket: </small> <b><small>{{item.ticket}}</small></b>
-            <div class="estado">{{buscarNombreDeEstado(item.estado)}}</div>
-          </ion-card-title>
-          <ion-card-subtitle>{{item.fechaCreacion | date: 'dd/MM/yyyy HH:mm'}} .::. {{item.monto | number:'1.2-2'}} {{buscarAbrevDeMoneda(item.cuentaOrigen.moneda)}} a {{item.montoFinal | number:'1.2-2'}} {{buscarAbrevDeMoneda(item.cuentaDestino.moneda)}}</ion-card-subtitle>
-        </ion-card-header>
+        <ion-item-sliding>
+          <ion-item>
+            <ion-label>
+              <ion-card-header>
+                <ion-card-subtitle>
+                  <small>{{item.fechaCreacion | date: 'dd/MM/yyyy HH:mm'}}</small>
+                </ion-card-subtitle>
+                <ion-card-title>
+                  <b><small>Ticket: {{item.ticket}}</small></b>
+                </ion-card-title>
+              </ion-card-header>
+              <ion-card-content>
+                <table>
+                  <tr><th>DE</th><th>A</th></tr>
+                  <tr>
+                    <td>{{item.monto | number:'1.2-2'}} {{buscarAbrevDeMoneda(item.cuentaOrigen.moneda)}}</td>
+                    <td>{{item.montoFinal | number:'1.2-2'}} {{buscarAbrevDeMoneda(item.cuentaDestino.moneda)}}</td>
+                  </tr>
+                </table>
+                <div class="estado">{{buscarNombreDeEstado(item.estado)}}</div>
+              </ion-card-content>
+            </ion-label>
+          </ion-item>
+          <ion-item-options side="start">
+            <ion-item-option color="secondary">
+              <ion-icon slot="icon-only" name="create"></ion-icon>
+              <div>Editar</div>
+            </ion-item-option>
+          </ion-item-options>
+          <ion-item-options side="end">
+            <ion-item-option color="primary">
+              <ion-icon slot="icon-only" name="checkmark-circle"></ion-icon>
+              <div>Activar</div>
+            </ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
       </ion-card>
       <div class="spinner" *ngIf="estaCargando">
         <ion-progress-bar type="indeterminate"></ion-progress-bar>
       </div>
     </div>
+    </ng-container>
+    <ng-container *ngIf="estaCargando">
+      <ng-container *ngFor="let item of loaderCustom; let index">
+        <ion-card>
+          <ion-item-sliding>
+            <ion-item>
+              <ion-label>
+                <ion-card-header>
+                  <ion-card-subtitle>
+                    <ion-skeleton-text [animated]="true"></ion-skeleton-text>
+                  </ion-card-subtitle>
+                  <ion-card-title>
+                    <ion-skeleton-text [animated]="true"></ion-skeleton-text>
+                  </ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                  <div><ion-skeleton-text [animated]="true"></ion-skeleton-text></div>
+                  <div><ion-skeleton-text [animated]="true"></ion-skeleton-text></div>
+                </ion-card-content>
+              </ion-label>
+            </ion-item>
+          </ion-item-sliding>
+        </ion-card>
+      </ng-container>
+    </ng-container>
   </div>
 </ion-content>
