--- a/smart-exchange-movil/src/app/tabs/tabs.page.scss
+++ b/smart-exchange-movil/src/app/tabs/tabs.page.scss
@@ -1,1 +1,10 @@
+ion-tab-button{
+    color: white;
+}
+.tab-selected {
+    color: var(--ion-color-primary);
+}
 
+ion-tab-bar, ion-tab-button{
+    background-color: var(--ion-color-secondary);
+}
